# Mesh-Inpainting

./: README.md  vector-heat
HGSD/: CMakeLists.txt
HGSD/2-1Cut/: loopinfo-2-1.txt
HGSD/4-1Cut/: loopinfo-4-1.txt
HGSD/bunnyCut/: cutInfo_0.txt  cutInfo_2.txt  cutInfo_3.txt
HGSD/cutpatchs/: loopinfo1.txt  loopinfo4.txt
HGSD/include/: utils.h
HGSD/src/: ZeroSignedDistance.cpp  cut.cpp  cutAll.cpp  demoGeoPath.cpp  demoPatchTransfer.cpp  demoQSLIM.cpp  demoRealFakeHole.cpp  demo_app.cpp  flipGeodesicsDemo.cpp  isoTopoisson.cpp  main.cpp  quicktest.cpp  remeshProj.cpp  utils.cpp
include/: utils.h
src/: main.cpp  utils.cpp
